Cambio de nombre 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<div class="container-logo">
 					
-					<h1 class="logo"><a href="/">Jordi</a></h1>
+					<h1 class="logo"><a href="/">Coco Loco</a></h1>
 				</div>
 
 				<div class="container-user">
