--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
 
 		<section class="gallery">
 			<img
-				src="../css/img/Diseño sin título.png"
+				src=""
 				alt="Gallery Img1"
 				class="gallery-img-1"
 			/><img
-				src="../css/img/Diseño sin título.png"
+				src=""
 				alt="Gallery Img2"
 				class="gallery-img-2"
 			/><img
@@ -272,11 +272,11 @@
 				alt="Gallery Img3"
 				class="gallery-img-3"
 			/><img
-				src="../css/img/Diseño sin título.png"
+				src=""
 				alt="Gallery Img4"
 				class="gallery-img-4"
 			/><img
-				src="../css/img/Diseño sin título.png"
+				src=""
 				alt="Gallery Img5"
 				class="gallery-img-5"
 			/>
