--- a/index.html
+++ b/index.html
@@ -539,11 +539,12 @@
 				<div class="information">
 					<p class="title-footer">Información</p>
 					<ul>
-						<li><a href="#">Acerca de Nosotros</a></li>
-						<li><a href="#">Información Delivery</a></li>
-						<li><a href="#">Politicas de Privacidad</a></li>
-						<li><a href="#">Términos y condiciones</a></li>
-						<li><a href="#">Contactános</a></li>
+						<a href="">
+						<li><a href="../Proyecto info/html/CocoLoco.html">Acerca de Nosotros</a></li>
+						<li><a href="../Proyecto info/html/CocoLoco.html">Información Delivery</a></li>
+						<li><a href="../Proyecto info/html/CocoLoco.html">Politicas de Privacidad</a></li>
+						<li><a href="../Proyecto info/html/CocoLoco.html">Términos y condiciones</a></li>
+						<li><a href="../Proyecto info/html/CocoLoco.html">Contactános</a></li>
 					</ul>
 				</div>
 
