--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 			<div class="container-blogs">
 				<div class="card-blog">
 					<div class="container-img">
-						<img src="img/blog-1.jpg" alt="Imagen Blog 1" />
+						<img src="css\img\Imagen1.png" />
 						<div class="button-group-blog">
 							<span>
 								<i class="fa-solid fa-magnifying-glass"></i>
@@ -436,7 +436,7 @@
 						</div>
 					</div>
 					<div class="content-blog">
-						<h3>Lorem, ipsum dolor sit</h3>
+						<h3>Acerca de nosotros</h3>
 						<span>29 Noviembre 2022</span>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -445,12 +445,12 @@
 							voluptas facilis corporis, consequatur eius est sunt
 							suscipit?
 						</p>
-						<div class="btn-read-more">Leer más</div>
+						<div class="btn-read-more">"""""</div>
 					</div>
 				</div>
 				<div class="card-blog">
 					<div class="container-img">
-						<img src="img/blog-2.jpg" alt="Imagen Blog 2" />
+						<img src="css\img\Delivery.png" alt="Imagen Blog 2" />
 						<div class="button-group-blog">
 							<span>
 								<i class="fa-solid fa-magnifying-glass"></i>
@@ -461,7 +461,7 @@
 						</div>
 					</div>
 					<div class="content-blog">
-						<h3>Lorem, ipsum dolor sit</h3>
+						<h3>Información Delivery</h3>
 						<span>29 Noviembre 2022</span>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -470,12 +470,12 @@
 							voluptas facilis corporis, consequatur eius est sunt
 							suscipit?
 						</p>
-						<div class="btn-read-more">Leer más</div>
+						<div class="btn-read-more"></div>
 					</div>
 				</div>
 				<div class="card-blog">
 					<div class="container-img">
-						<img src="img/blog-3.jpg" alt="Imagen Blog 3" />
+						<img src="css\img\Logo_Escudo-03.png" alt="Imagen Blog 3" />
 						<div class="button-group-blog">
 							<span>
 								<i class="fa-solid fa-magnifying-glass"></i>
@@ -486,7 +486,7 @@
 						</div>
 					</div>
 					<div class="content-blog">
-						<h3>Lorem, ipsum dolor sit</h3>
+						<h3>Semana de juventud 2023</h3>
 						<span>29 Noviembre 2022</span>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -495,7 +495,7 @@
 							voluptas facilis corporis, consequatur eius est sunt
 							suscipit?
 						</p>
-						<div class="btn-read-more">Leer más</div>
+						<div class="btn-read-more"></div>
 					</div>
 				</div>
 			</div>
@@ -534,18 +534,6 @@
 							</a>
 						</span>
 					</div>
-				</div>
-
-				<div class="information">
-					<p class="title-footer">Información</p>
-					<ul>
-						<a href="">
-						<li><a href="../Proyecto info/html/CocoLoco.html">Acerca de Nosotros</a></li>
-						<li><a href="../Proyecto info/html/CocoLoco.html">Información Delivery</a></li>
-						<li><a href="../Proyecto info/html/CocoLoco.html">Politicas de Privacidad</a></li>
-						<li><a href="../Proyecto info/html/CocoLoco.html">Términos y condiciones</a></li>
-						<li><a href="../Proyecto info/html/CocoLoco.html">Contactános</a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="copyright">
