Cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<!-- Producto 1 -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="../css/img/Diseño sin título (2).png" alt="Cafe Irish" />
+						<img src="css\img\Diseño sin título (1) (1).png" alt="Cafe Irish" />
 						<span class="discount">-13%</span>
 						<div class="button-group">
 							<span>
@@ -194,8 +194,8 @@
 				<div class="card-product">
 					<div class="container-img">
 						<img
-							src="../css/img/Diseño sin título.png"
-							alt="Cafe Australiano"
+							src="css\img\Diseño sin título (2).png"
+							alt="Coco Loco"
 						/>
 						<div class="button-group">
 							<span>
@@ -227,7 +227,7 @@
 				<!--  -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="../css/img/Diseño sin título (1).png" alt="Cafe Helado" />
+						<img src="css\img\Diseño sin título (1) (1).png" alt="Coco Loco" />
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -260,11 +260,11 @@
 
 		<section class="gallery">
 			<img
-				src=""
+				src="css\img\Diseño sin título (1) (1).png"
 				alt="Gallery Img1"
 				class="gallery-img-1"
 			/><img
-				src=""
+				src="css\img\Diseño sin título (2) (1).png"
 				alt="Gallery Img2"
 				class="gallery-img-2"
 			/><img
@@ -289,7 +289,7 @@
 				<!-- Producto 1 -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="../css/img/Diseño sin título (1).png" alt="" />
+						<img src="css\img\Diseño sin título (2) (1).png" alt="" />
 						<span class="discount">-13%</span>
 						<div class="button-group">
 							<span>
@@ -439,13 +439,9 @@
 						<h3>Acerca de nosotros</h3>
 						<span>29 Noviembre 2022</span>
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Iste, molestiae! Ratione et, dolore ipsum
-							quaerat iure illum reprehenderit non maxime amet dolor
-							voluptas facilis corporis, consequatur eius est sunt
-							suscipit?
+							Coco Loco nació como una idea de emprendimiento con el objetivo de fomentar el consumo de postres más saludables de los que consumimos amenudo.
 						</p>
-						<div class="btn-read-more">"""""</div>
+						<div class="btn-read-more"></div>
 					</div>
 				</div>
 				<div class="card-blog">
