--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<!-- Producto 1 -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="css\img\Diseño sin título (1) (1).png" alt="Cafe Irish" />
+						<img src="css\img\Diseño sin título (2) (1).png" alt="Cafe Irish" />
 						<span class="discount">-13%</span>
 						<div class="button-group">
 							<span>
@@ -268,7 +268,7 @@
 				alt="Gallery Img2"
 				class="gallery-img-2"
 			/><img
-				src="####"
+				src="css\img\TENE MIERDA.png"
 				alt="Gallery Img3"
 				class="gallery-img-3"
 			/><img
