Cambio de imagenes y detalles finales

--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
 				<i class="fa-solid fa-bars"></i>
 				<ul class="menu">
 					<li><a href="#">Inicio</a></li>
-					<li><a href="#">####</a></li>
-					<li><a href="#">####</a></li>
-					<li><a href="#">####</a></li>
-					<li><a href="#">####</a></li>
-					<li><a href="#">####</a></li>
+					<li><a href="#AcercaDeNosotros" id="content-blog">Acerca de nosotros</a></li>
+					<li><a href="#InformacionDelivery" id="content-blog">Información Delivery</a></li>
+					<li><a href="#SemanaDeJuventud" id="content-blog">Semana de juventud</a></li>
 				</ul>
 
 				<form class="search-form">
@@ -99,16 +97,13 @@
 			<h1 class="heading-1">Mejores Categorías</h1>
 			<div class="container-categories">
 				<div class="card-category category-moca">
-					<p>####</p>
-					<span>Ver más</span>
+					<p>Agua de coco</p>
 				</div>
 				<div class="card-category category-expreso">
-					<p>####</p>
-					<span>Ver más</span>
+					<p>Dulce de coco</p>
 				</div>
 				<div class="card-category category-capuchino">
-					<p>####</p>
-					<span>Ver más</span>
+					<p>Sorbete</p>
 				</div>
 			</div>
 		</section>
@@ -126,8 +121,7 @@
 				<!-- Producto 1 -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="css\img\Diseño sin título (2) (1).png" alt="Cafe Irish" />
-						<span class="discount">-13%</span>
+						<img src="css\img\Aceite.png" alt="Cafe Irish" />
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -146,23 +140,21 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-regular fa-star"></i>
+							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>####</h3>
+						<h3>Aceite de Coco</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$4.60 <span>$5.30</span></p>
+						<p class="price">$3.00 <span>$4.00</span></p>
 					</div>
 				</div>
 				<!-- Producto 2 -->
 				<div class="card-product">
 					<div class="container-img">
 						<img
-							src="../css/img/Diseño sin título (1).png"
-							alt="Cafe incafe-ingles.jpg"
-						/>
-						<span class="discount">-22%</span>
+							src="css\img\Dulces.jpg"
+							alt="Cafe incafe-ingles.jpg"/>
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -180,21 +172,21 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-regular fa-star"></i>
-							<i class="fa-regular fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>#####</h3>
+						<h3>Dulces de coco</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$5.70 <span>$7.30</span></p>
+						<p class="price">$1.15 <span>$1.50</span></p>
 					</div>
 				</div>
 				<!--  -->
 				<div class="card-product">
 					<div class="container-img">
 						<img
-							src="css\img\Diseño sin título (2).png"
+							src="css\img\CocoSonriendo.png"
 							alt="Coco Loco"
 						/>
 						<div class="button-group">
@@ -217,17 +209,17 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>####</h3>
+						<h3>La clasica</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$3.20</p>
+						<p class="price">$1.25</p>
 					</div>
 				</div>
 				<!--  -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="css\img\Diseño sin título (1) (1).png" alt="Coco Loco" />
+						<img src="css\img\horchata.png" alt="Coco Loco" />
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -246,13 +238,13 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-regular fa-star"></i>
+							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>####</h3>
+						<h3>La unica</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$5.60</p>
+						<p class="price">$1.50</p>
 					</div>
 				</div>
 			</div>
@@ -260,11 +252,11 @@
 
 		<section class="gallery">
 			<img
-				src="css\img\Diseño sin título (1) (1).png"
+				src="css\img\Cocopeludo.png"
 				alt="Gallery Img1"
 				class="gallery-img-1"
 			/><img
-				src="css\img\Diseño sin título (2) (1).png"
+				src="css\img\CocoSonriendo.png"
 				alt="Gallery Img2"
 				class="gallery-img-2"
 			/><img
@@ -272,25 +264,24 @@
 				alt="Gallery Img3"
 				class="gallery-img-3"
 			/><img
-				src=""
+				src="css\img\CocoSonriendo.png"
 				alt="Gallery Img4"
 				class="gallery-img-4"
 			/><img
-				src=""
+				src="css\img\Cocopeludo.png"
 				alt="Gallery Img5"
 				class="gallery-img-5"
 			/>
 		</section>
 
 		<section class="container specials">
-			<h1 class="heading-1">Especiales</h1>
+			<h1 class="heading-1">Dulces</h1>
 
 			<div class="container-products">
 				<!-- Producto 1 -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="css\img\Diseño sin título (2) (1).png" alt="" />
-						<span class="discount">-13%</span>
+						<img src="" alt="" />
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -309,23 +300,18 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-regular fa-star"></i>
+							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>####</h3>
+						<h3>La pou</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$4.60 <span>$5.30</span></p>
+						<p class="price">$1.00 <span></span></p>
 					</div>
 				</div>
 				<!-- Producto 2 -->
 				<div class="card-product">
 					<div class="container-img">
-						<img
-							src="../css/img/Diseño sin título (2).png"
-							alt=""
-						/>
-						<span class="discount">-22%</span>
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -343,21 +329,20 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-regular fa-star"></i>
-							<i class="fa-regular fa-star"></i>
+							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>#####</h3>
+						<h3>La Gringa</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$5.70 <span>$7.30</span></p>
+						<p class="price">$1.00<span></span></p>
 					</div>
 				</div>
 				<!--  -->
 				<div class="card-product">
 					<div class="container-img">
-						<img src="../css/img/Diseño sin título.png" alt="" />
-						<span class="discount">-30%</span>
+						<img src="" alt="" />
 						<div class="button-group">
 							<span>
 								<i class="fa-regular fa-eye"></i>
@@ -378,11 +363,11 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>####</h3>
+						<h3>El chicote</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$3.85 <span>$5.50</span></p>
+						<p class="price">$1.00<span></span></p>
 					</div>
 				</div>
 				<!--  -->
@@ -407,13 +392,13 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-regular fa-star"></i>
+							<i class="fa-solid fa-star"></i>
 						</div>
-						<h3>####</h3>
+						<h3>La chelita</h3>
 						<span class="add-cart">
 							<i class="fa-solid fa-basket-shopping"></i>
 						</span>
-						<p class="price">$5.60</p>
+						<p class="price">$1.00</p>
 					</div>
 				</div>
 			</div>
@@ -435,13 +420,13 @@
 							</span>
 						</div>
 					</div>
-					<div class="content-blog">
+					<div class="content-blog" id="AcercaDeNosotros">
 						<h3>Acerca de nosotros</h3>
-						<span>29 Noviembre 2022</span>
+						<span></span>
 						<p>
-							Coco Loco nació como una idea de emprendimiento con el objetivo de fomentar el consumo de postres más saludables de los que consumimos amenudo.
+							Coco Loco nació como una idea de emprendimiento con el objetivo de fomentar el consumo de postres más saludables de los que consumimos amenudo, y con el extra de ir ampliando nuestro catálogo de venta a muchos otros servicios de productos derivados del coco, ahora miramos al pasado y vemos que todo inicio con una simple sugerencia de nuestro coordinador, persona a la cual Coco loco le guarda mucho cariño puesto que fue quien brindo la idea para iniciar este gran proyecto; fomentamos el consumo de esta gran fruta de igual manera apoyamos con empleo a muchas personas locales y generamos ingresos para las personas de donde obtenemos nuestra materia prima, Coco loco es una empresa que inició con una simple idea, idea que al día continúa escribiendo su historia.
 						</p>
-						<div class="btn-read-more"></div>
+						
 					</div>
 				</div>
 				<div class="card-blog">
@@ -456,17 +441,12 @@
 							</span>
 						</div>
 					</div>
-					<div class="content-blog">
+					<div class="content-blog" id="InformacionDelivery">
 						<h3>Información Delivery</h3>
-						<span>29 Noviembre 2022</span>
+						<span></span>
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Iste, molestiae! Ratione et, dolore ipsum
-							quaerat iure illum reprehenderit non maxime amet dolor
-							voluptas facilis corporis, consequatur eius est sunt
-							suscipit?
+							Ofrecer un servicio de delivery para que los clientes puedan recibir sus productos de manera conveniente y segura en la dirección que prefieran. El servicio de delivery se puede promocionar en la página web o redes sociales del negocio, indicando los productos disponibles para entrega, los horarios de entrega y los costos asociados, si los hay. Para asegurar una experiencia de entrega satisfactoria, es importante contar con un buen sistema de registro y seguimiento de los pedidos, y coordinar con los clientes para garantizar que los productos sean entregados en el momento y lugar acordados.
 						</p>
-						<div class="btn-read-more"></div>
 					</div>
 				</div>
 				<div class="card-blog">
@@ -481,17 +461,11 @@
 							</span>
 						</div>
 					</div>
-					<div class="content-blog">
+					<div class="content-blog" id="SemanaDeJuventud">
 						<h3>Semana de juventud 2023</h3>
-						<span>29 Noviembre 2022</span>
 						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Iste, molestiae! Ratione et, dolore ipsum
-							quaerat iure illum reprehenderit non maxime amet dolor
-							voluptas facilis corporis, consequatur eius est sunt
-							suscipit?
+							La Semana de Juventud del Colegio Salesiano Santa Cecilia es un evento anual que se lleva a cabo en la institución educativa . Es una actividad en la que los estudiantes pueden mostrar su talento y participar en diversas actividades y eventos organizados por el colegio. La Semana de Juventud tiene una larga tradición en el Colegio Salesiano Santa Cecilia , por lo que es muy esperada por los estudiantes y la comunidad educativa en general.
 						</p>
-						<div class="btn-read-more"></div>
 					</div>
 				</div>
 			</div>
@@ -505,25 +479,17 @@
 					<p class="title-footer">Información de Contacto</p>
 					<ul>
 						<li>
-							Dirección: 71 Pennington Lane Vernon Rockville, CT
-							06066
+							Dirección: Calle Don Bosco y Av. Manuel Gallardo, 1-1, Santa Tecla
 						</li>
 						<li>Teléfono: 6038-8354</li>
-						<li>Fax: 55555300</li>
-						<li>EmaiL: #####@santacecilia.edu.sv</li>
+						<li>Contacto: 20210095@santacecilia.edu.sv</li>
 					</ul>
 					<div class="social-icons">
 						<span class="facebook">
 							<i class="fa-brands fa-facebook-f"></i>
 						</span>
-						<span class="twitter">
-							<i class="fa-brands fa-twitter"></i>
-						</span>
 						<span class="youtube">
 							<i class="fa-brands fa-youtube"></i>
-						</span>
-						<span class="pinterest">
-							<i class="fa-brands fa-pinterest-p"></i>
 						</span>
 						<span class="instagram"> <a href="https://www.instagram.com/coco_loco.sv/">
 							<i class="fa-brands fa-instagram"></i>
