Cambio en el envio y costo de envio

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<i class="fa-solid fa-plane-up"></i>
 				<div class="feature-content">
 					<span>Envío a nivel nacional</span>
-					<p>En pedido superior a $30</p>
+					<p>Tarifa dependiente del costo</p>
 				</div>
 			</div>
 			<div class="card-feature">
@@ -424,7 +424,7 @@
 						<h3>Acerca de nosotros</h3>
 						<span></span>
 						<p>
-							Coco Loco nació como una idea de emprendimiento con el objetivo de fomentar el consumo de postres más saludables de los que consumimos amenudo, y con el extra de ir ampliando nuestro catálogo de venta a muchos otros servicios de productos derivados del coco, ahora miramos al pasado y vemos que todo inicio con una simple sugerencia de nuestro coordinador, persona a la cual Coco loco le guarda mucho cariño puesto que fue quien brindo la idea para iniciar este gran proyecto; fomentamos el consumo de esta gran fruta de igual manera apoyamos con empleo a muchas personas locales y generamos ingresos para las personas de donde obtenemos nuestra materia prima, Coco loco es una empresa que inició con una simple idea, idea que al día continúa escribiendo su historia.
+							
 						</p>
 						
 					</div>
