--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<div class="container-hero">
+		<div class="container-hero"> -
 			<div class="container hero">
 				<div class="customer-support">
 					<i class="fa-solid fa-headset"></i>
@@ -424,7 +424,7 @@
 						<h3>Acerca de nosotros</h3>
 						<span></span>
 						<p>
-							
+							Coco Loco se basó en la necesidad de algo refrescante y saludable para combatir contra el fuerte calor que se siente en El Salvador y con esto fomentamos el consumo de esta gran fruta de donde hemos ampliado de gran manera nuestro catálogo de ventas a muchos productos derivados de esta gran fruta que se cultiva de gran manera en nuestro país
 						</p>
 						
 					</div>
@@ -485,14 +485,19 @@
 						<li>Contacto: 20210095@santacecilia.edu.sv</li>
 					</ul>
 					<div class="social-icons">
-						<span class="facebook">
+						<span class="facebook"> <a href="https://www.facebook.com/people/Coco-Loco/100095048423205/?is_tour_dismissed=true">
 							<i class="fa-brands fa-facebook-f"></i>
+							</a>
 						</span>
 						<span class="youtube">
 							<i class="fa-brands fa-youtube"></i>
 						</span>
 						<span class="instagram"> <a href="https://www.instagram.com/coco_loco.sv/">
 							<i class="fa-brands fa-instagram"></i>
+							</a>
+						</span>
+						<span class="TikTok"> <a href="https://www.tiktok.com/@coco_loco.sv?_t=8enwfdvndke&_r=1">
+							<i class="fa-brands fa-tiktok"></i>
 							</a>
 						</span>
 					</div>
